<?xml version="1.0" encoding="utf-8"?>
<!--Nama  : Moch. Star Ramadhan-->
<!--Nim   : 10116482-->
<!--Kelas : AKB/IF - 11-->
<!--Waktu Pengertaan Mulai Tanggal 18/04/2019-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="5"
    android:orientation="vertical"
    android:background="@color/lightBlue">


    <TextView
        android:id="@+id/txtVerifyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_title"
        android:textColor="@color/background"
        android:gravity="center"
        android:layout_marginTop="140dp"
        android:textSize="40sp"
        android:fontFamily="@font/drugs"
        />
    <TextView
        android:id="@+id/txtAtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_desc"
        android:textColor="@color/background"
        android:layout_below="@+id/txtVerifyTitle"
        android:gravity="center"
        android:fontFamily="@font/drugs"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/edtVerify"
        android:layout_below="@id/txtAtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/background"
        android:hint="@string/verify_hint"
        android:textColorHint="@color/background"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/background"
        android:fontFamily="@font/drugs"
        />
    <Button
        android:id="@+id/btnVerify"
        android:layout_below="@+id/edtVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/background"
        android:background="@drawable/blue_button"
        android:textAllCaps="true"
        android:text="@string/btn_send"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="kePage5"
        />
    <LinearLayout
        android:layout_below="@id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:fontFamily="@font/drugs"
        >
        <TextView
            android:id="@+id/btnRegister1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:textSize="13sp"
            android:text="@string/ask_code"
            android:textAlignment="center"
            android:fontFamily="@font/drugs"
            />
        <TextView
            android:id="@+id/btnRegister2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:textSize="13sp"
            android:text="@string/btn_resend"
            android:textAlignment="center"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>
