<?xml version="1.0" encoding="utf-8"?>
<!--Nama  : Moch. Star Ramadhan-->
<!--Nim   : 10116482-->
<!--Kelas : AKB/IF - 11-->
<!--Waktu Pengertaan Mulai Tanggal 18/04/2019-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="25"
    android:orientation="vertical"
    android:background="@color/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/ic_header"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_header_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_centerVertical="true"
            android:paddingLeft="80dp"
            android:textColor="@color/background"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/separate"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/separator"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="23">
        <EditText
            android:id="@+id/edtUsername2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:backgroundTint="@color/fontDesc"
            android:textColorHint="@color/fontDesc"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/fontDesc"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"

            />
        <EditText
            android:id="@+id/edtEmail"
            android:layout_below="@+id/edtUsername2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/email"
            android:backgroundTint="@color/fontDesc"
            android:textColorHint="@color/fontDesc"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/fontDesc"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_below="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/phone"
            android:backgroundTint="@color/fontDesc"
            android:textColorHint="@color/fontDesc"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/fontDesc"
            android:inputType="number"
            android:paddingBottom="15dp"
            />
            <RadioGroup
                android:id="@+id/rbGender"
                android:layout_below="@id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:buttonTint="@color/lightBlue"
                    android:textSize="15sp"
                    android:textColor="@color/fontDesc"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="100dp"
                    android:buttonTint="@color/lightBlue"
                    android:textSize="15sp"
                    android:textColor="@color/fontDesc"/>
            </RadioGroup>
        <RelativeLayout
            android:id="@+id/spinner"
            android:layout_below="@id/rbGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Spinner
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:entries="@array/blood_type"
                android:layout_alignParentStart="true"
                ></Spinner>
            <Spinner
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:entries="@array/reshus"
                android:layout_alignParentEnd="true"
                android:textSize="15sp"
                android:textColor="@color/fontDesc"></Spinner>
        </RelativeLayout>
        <EditText
            android:id="@+id/edtPass1"
            android:layout_below="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/password"
            android:backgroundTint="@color/fontDesc"
            android:textColorHint="@color/fontDesc"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/fontDesc"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            />
        <EditText
            android:id="@+id/edtPass2"
            android:layout_below="@+id/edtPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/password2"
            android:backgroundTint="@color/fontDesc"
            android:textColorHint="@color/fontDesc"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/fontDesc"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            />
        <RadioGroup
            android:id="@+id/rbType"
            android:layout_below="@id/edtPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:buttonTint="@color/lightBlue"
                android:textSize="15sp"
                android:textColor="@color/fontDesc"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization"
                android:layout_marginLeft="75dp"
                android:buttonTint="@color/lightBlue"
                android:textSize="15sp"
                android:textColor="@color/fontDesc"/>
        </RadioGroup>
        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/job"
            android:layout_below="@id/rbType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:entries="@array/jobs"
            ></Spinner>
        <EditText
            android:id="@+id/edtAddress"
            android:layout_below="@id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/address"
            android:backgroundTint="@color/fontDesc"
            android:textColorHint="@color/fontDesc"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/fontDesc"
            android:inputType="text"
            android:paddingBottom="15dp"
            />
        <EditText
            android:id="@+id/edtLocation"
            android:layout_below="@id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:hint="@string/location"
            android:drawableRight="@drawable/ic_blood_needed_location"
            android:backgroundTint="@color/fontDesc"
            android:textColorHint="@color/fontDesc"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/fontDesc"
            android:inputType="text"
            android:paddingBottom="15dp"
            />
        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_below="@id/edtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:paddingLeft="25dp"
            android:text="@string/agree"
            android:textColor="@color/fontDesc"
            android:buttonTint="@color/lightBlue"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbAgree"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/white_button"
            android:fontFamily="@font/drugs"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/lightBlue"
            android:text="@string/register"
            android:textSize="16sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:onClick="kePage3"
            />
    </RelativeLayout>
</LinearLayout>
