<?xml version="1.0" encoding="utf-8"?>
<!--Nama  : Moch. Star Ramadhan-->
<!--Nim   : 10116482-->
<!--Kelas : AKB/IF - 11-->
<!--Waktu Pengertaan Mulai Tanggal 18/04/2019-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="5"
    android:orientation="vertical"
    android:background="@color/lightBlue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_welcome_logo" />
        <EditText
            android:id="@+id/edtUsername"
            android:layout_below="@+id/welcome_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:fontFamily="@font/drugs"
            android:textStyle="bold"
            android:hint="@string/username"
            android:textColorHint="@color/background"
            android:textSize="15sp"
            android:backgroundTint="@color/background"
            android:textColor="@color/background"
            android:inputType="text"
            android:paddingBottom="25dp"/>
        <EditText
            android:id="@+id/edtPass"
            android:layout_below="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:fontFamily="@font/drugs"
            android:textStyle="bold"
            android:hint="@string/password"
            android:textColorHint="@color/background"
            android:textSize="15sp"
            android:backgroundTint="@color/background"
            android:textColor="@color/background"
            android:inputType="textPassword"
            android:paddingBottom="25dp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_below="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/background"
            android:background="@drawable/blue_button"
            android:textAllCaps="true"
            android:text="@string/btn_login"
            android:textSize="16sp"
            android:fontFamily="@font/drugs"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txtOr"
            android:layout_below="@id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/background"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textSize="15sp"
            android:fontFamily="@font/drugs"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtOr"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/blue_button"
            android:drawableStart="@drawable/ic_welcome_fb_login"
            android:fontFamily="@font/drugs"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/background"
            android:text="@string/btn_fb"
            android:textSize="16sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            />
        <LinearLayout
            android:layout_below="@id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:fontFamily="@font/drugs"
            >
            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/background"
                android:textSize="13sp"
                android:text="@string/ask_account"
                android:textAlignment="center"
                android:fontFamily="@font/drugs"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/background"
                android:textSize="13sp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textStyle="bold"
                android:onClick="kePage2"
                />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
